--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "pure-react-carousel": "^1.28.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-images-upload": "^1.2.7",
     "react-scripts": "5.0.0",
     "web-vitals": "^2.1.4"
   },
