--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "express": "^4.17.3",
     "google-maps-react": "^2.0.6",
     "morgan": "^1.10.0",
+    "multer": "^1.4.4",
     "path": "^0.12.7",
     "pure-react-carousel": "^1.28.1",
     "react": "^17.0.2",
@@ -25,7 +26,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "server": "node server/index.js"
+    "server": "node server/server.js"
   },
   "eslintConfig": {
     "extends": [
